@@ -453,12 +453,11 @@ int readinitfile(gchar *fname) {
 
 int checkinitfile() {
 	/* com.initfile will contain the path passed with -i if any, NULL else */
-	set_wisdom_file();
 	if (com.initfile) {
 		siril_log_message(_("Reading configuration file %s\n"), com.initfile);
 		return readinitfile(com.initfile);
 	}
-
+	set_wisdom_file();
 	int retval = 0;
 
 	/* set com.initfile to default location */
