@@ -16,6 +16,7 @@ v1.2.0-beta1 xxx xx, 2023
 * Fixed min and max framing borders calculations if the sequence had variable image sizes
 * Reworked GHS commands
 * Added a warning when trying to read one-frame SER files
+* Autodetect libfftw threading support
 * Add support for Torch-based StarNet executables
 
 
